--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_addexpense"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_fab_add"
         android:title="@string/title_addexpense" />
 
 </menu>
