--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.CashbackApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.CashbackApp.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
 
-    <style name="Theme.CashbackApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.CashbackApp.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 </resources>
